[package]
name = "lotus-miner"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
hex-literal = "0.3.1"
hex = "0.4.3"
sha2 = "0.9.3"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = "0.11.3"
bitcoincash-addr = "0.5.2"
rand = "0.8.3"