[package]
name = "lotus-miner"
version = "0.2.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
hex-literal = "0.3.1"
hex = "0.4.3"
sha2 = "0.9.3"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = "0.11.3"
bitcoincash-addr = "0.5.2"
config = "0.11.0"
clap = { version = "2.33.3", features = ["yaml"] }
dirs = "3.0.1"
