[package]
name = "lotus-miner-gui"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lotus-miner-lib = { path = "../lotus-miner-lib" }

tokio = { version = "1.5.0", features = ["full"] }

eframe = { version = "0.14.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
clipboard = "0.5.0"
