[package]
name = "lotus-miner-lib"
version = "0.3.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
ocl = "0.19.3"
hex-literal = "0.3.1"
hex = "0.4.3"
sha2 = "0.9.3"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = "0.11.3"
bitcoincash-addr = "0.5.2"
config = "0.11.0"
clap = { version = "2.33.3", features = ["yaml"] }
dirs = "3.0.1"
rand = "0.8.3"
chrono = "0.4.19"
eyre = "0.6.5"
thiserror = "1.0"
